--- a/index.html
+++ b/index.html
@@ -440,7 +440,22 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5">mongoDB</h5>
+                <data value="85">85%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+
+            </li>
+
+           
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Express JS</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -453,20 +468,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Figma design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Web development</h5>
+                <h5 class="h5">React JS</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -479,12 +481,40 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Data structure</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">Node JS</h5>
+                <data value="85">85%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+
+            </li>
+
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">AWS</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Figma design</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
